# Embedding

./: .gitignore  README.md  model_name.txt  pyproject.toml
embed/: embed_start.sh  embed_stop.sh  server_embedding.py
embed/nginx_html/: index.html
embedding/: embed_stoppost.sh  server_embedding.py
matching/: extract_matching_from_call_transcripts.py  process_demo.py  save_call_transcript.py  utils.py
scripts/: compute_embedding.sh  extract_matching_from_call_transcripts.py  save_call_transcript.py
src/embedding/: compute_embedding.sh  embed_nginx.conf  script.py  test_changing_model.py  utils.py
src/extract_up_matchings_from_calls/: extract_up_matchings.py  utils.py
src/generate_matching_inputs/: extract_up_matchings.py  save_call_transcripts.py  utils.py
test/: test_extract_up_matching.py
tests/: test_extract_matching.py  test_extract_up_matching.py  test_save_call_transcripts.py
