[project]
name = "embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "optimum[onnxruntime]>=1.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.33.4",
    "onnxruntime>=1.22.1",
    "onnxruntime-gpu",
    "light-embed>=0.1.2",
    "requests>=2.32.4",
    "flask>=3.1.1",
]
